# embedding_service

./: .copilot-instructions.md  .env.sample  =0.24.0  =0.35.0  =5.1.0  =6.4.0  Dockerfile  README.md  TESTING.md  categories.py  compensation_parser.py  demo_new_departments.py  docker-compose.yaml  embedding_service.py  helpers.py  main.py  pyproject.toml  pytest.ini  schemas.py  test_embedding_service.py  test_integration.py  test_main.py  test_new_departments.py
.github/workflows/: docker-publish.yml  test.yml
