[project]
name = "embeddings-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "accelerate>=1.10.1",
    "fastapi>=0.120.1",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "numpy>=2.3.3",
    "pytest>=8.4.2",
    "redis>=6.4.0",
    "sentence-transformers>=5.1.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
    "uvloop>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pytest-cov>=5.0.0",
]
